--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "engines":{
-    "node":"22.14.0"
+  "engines": {
+    "node": "22.14.0"
   },
   "name": "major-project",
   "version": "1.0.0",
@@ -11,7 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "<<<<<<< HEAD\r # Major_project\r Airbnb clone\r =======\r # Travlo-webSite\r >>>>>>> 509154ddbfc606523a0a0f741c1f0ec4318baf5a",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.1",
     "cloudinary": "^2.7.0",
@@ -30,5 +30,14 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nakul744/Travlo-webSite.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Nakul744/Travlo-webSite/issues"
+  },
+  "homepage": "https://github.com/Nakul744/Travlo-webSite#readme"
 }
